--- a/modelo.css
+++ b/modelo.css
@@ -105,8 +105,6 @@ img {
 
 img:hover {
     transform: scale(1.05);
-
-
 }
 
 hr {
@@ -148,7 +146,7 @@ hr {
     align-items: center;
     font-size: 5.5em;
     font-weight: bold;
-    color: #0e9cc0;
+    color: #244d57;
     text-shadow: 0 0 8px #6d51d2;
     font-family: 'Courier New', monospace;
 }
