--- a/modelo.css
+++ b/modelo.css
@@ -178,3 +178,55 @@ hr {
   transform: translateY(6px);
   box-shadow: 0 0 0 #a36b00;
 }
+
+.estrella {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background: yellow;
+  border-radius: 50%;
+  pointer-events: none;
+  animation: brillar 1s ease-out;
+}
+@keyframes brillar {
+  from { opacity: 1; transform: scale(1); }
+  to { opacity: 0; transform: scale(3); }
+}
+
+
+
+body {
+  background-color: white;
+  color: black;
+  transition: all 0.3s ease;
+  font-family: 'Segoe UI', sans-serif;
+  padding-top: 100px;
+}
+
+body.oscuro {
+  background-color: #121212;
+  color: white;
+}
+
+.boton_tema {
+  background-color: #f1c40f;
+  color: #222;
+  border: none;
+  padding: 12px 24px;
+  font-size: 16px;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0 4px 0 #c4a20e;
+  transition: all 0.3s ease;
+}
+
+.boton_tema:hover {
+  transform: translateY(-3px);
+}
+
+.boton_tema.oscuro {
+  background-color: #2c3e50;
+  color: #f1f1f1;
+  box-shadow: 0 4px 0 #1a252f;
+}
+
