--- a/modelo.css
+++ b/modelo.css
@@ -50,11 +50,6 @@ ol li {
     list-style: none;
 }
 
-#checks input[type="checkbox"] {
-    margin-right: 10px;
-    accent-color: #28a745;
-}
-
 table {
     width: 100%;
     border-collapse: collapse;
@@ -230,3 +225,54 @@ body.oscuro {
   box-shadow: 0 4px 0 #1a252f;
 }
 
+/* Modelo de checkbox para mejor visualizacion */
+
+.checkbox {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+}
+
+.checkbox__input {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.checkbox__label {
+  display: inline-block;
+  padding-left: 30px;
+  margin-bottom: 10px;
+  position: relative;
+  font-size: 16px;
+  color: #333;
+  cursor: pointer;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+body.oscuro .checkbox__label {
+  color: #fff; 
+}
+
+.checkbox__custom {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background: linear-gradient(#212121, #212121) padding-box,
+              linear-gradient(145deg,#e81cff, #40c9ff) border-box;
+  border: 2px solid transparent;
+  border-radius: 4px;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.checkbox__input:checked + .checkbox__label .checkbox__custom {
+  background-image: linear-gradient(145deg,#e81cff, #40c9ff);
+  transform: rotate(45deg) scale(0.8);
+}
+
+.checkbox__label:hover .checkbox__custom {
+  transform: scale(1.2);
+}
